Hlavní stránka, responzivita

--- a/src/index.html
+++ b/src/index.html
@@ -12,18 +12,60 @@
    <header class="header">
        <div class="container">
            <div class="header-block">
-                <div class="header_logo">
+                <div class="header__logo">
                     <img src="img/logo.png" alt="Logo">
                 </div>
-             <div class="header_info">
-                <div class="header_contacts">
-                   <span class="header_address">Praha</span>
-                   <a href="tel:+420 777 167 699" class="header_phone">+420 777 167 699</a>
+             <div class="header__info">
+                <div class="header__contacts">
+                   <span class="header__address">Praha</span>
+                   <a href="tel:+420 777 167 699" class="header__phone">+420 777 167 699</a>
                 </div>
              </div>
-             <button class="button header_button">Zavolej mi</button>
+             <button class="button header__button">Zavolej mi</button>
             </div>
        </div>
    </header>
+        
+
+   <main>
+       <section class="main">
+           <div class="container">
+               <div class="main-block">
+                   <div class="main-text">
+                       <h1 class="main-text__title">Dekorace vnitřních
+                        prostorů "na klíč"</h1>
+                        <span class="main-text_subtitle">se zárukou kvality stanovené ve smlouvě</span>
+                        <ul class="main-list">
+                            <li class="main-list__item">
+                                <div class="main-list__image">
+                                    <img src="img/clock@1.5x.png" alt="Hodiny">
+                                </div>
+                                <span class="main-list__text">Přesně dodržujeme termíny</span>
+                            </li>
+                            <li class="main-list__item">
+                                <div class="main-list__image">
+                                    <img src="img/calculator@1.5x.png" alt="Kalkulačka">
+                                </div>
+                                <span class="main-list__text">Vypočítáme náklady práce 
+                                    a materiálů ve stejný den poptávky </span>
+                            </li>
+                            <li class="main-list__item">
+                                <div class="main-list__image">
+                                    <img src="img/paint@1.5x.png" alt="Paleta">
+                                </div>
+                                <span class="main-list__text">Nabídneme vám více než 100 možností
+                                    provedení designu vašeho bydlení</span>
+                            </li>
+                        </ul>
+                   </div>
+                   <div class="main-imge">
+                       <img src="img/main-image.png" alt="Rozpoložení bytu">
+                   </div>
+               </div>
+           </div>
+       </section>  
+
+
+   </main>
 </body>
 </html>
